- added proxyservlet - added worklist-layout

--- a/lib/ext-2.0.2/examples/grid/array-grid.html
+++ b/lib/ext-2.0.2/examples/grid/array-grid.html
@@ -13,13 +13,15 @@
     <script type="text/javascript" src="../../ext-all.js"></script>
 
     <script type="text/javascript" src="array-grid.js"></script>
-    <link rel="stylesheet" type="text/css" href="grid-examples.css" />
+<!--     <link rel="stylesheet" type="text/css" href="grid-examples.css" /> -->
 
     <!-- Common Styles for the examples -->
-    <link rel="stylesheet" type="text/css" href="../examples.css" />
+<!--     <link rel="stylesheet" type="text/css" href="../examples.css" /> -->
 </head>
 <body>
-<script type="text/javascript" src="../examples.js"></script><!-- EXAMPLES -->
+
+<!-- <script type="text/javascript" src="../examples.js"></script> --> 
+<!-- EXAMPLES -->
 <h1>Array Grid Example</h1>
 <p>This example shows how to create a grid from Array data.</p>
 <p>Note that the js is not minified so it is readable. See <a href="array-grid.js">array-grid.js</a>.</p>
